fix gap

--- a/src/shared/ui/Menu/Menu.module.scss
+++ b/src/shared/ui/Menu/Menu.module.scss
@@ -19,7 +19,7 @@
   align-self: stretch;
 }
 .extraSpace {
-  margin-bottom: 100px;
+  margin-bottom: 48px;
 }
 .last {
   flex-grow: 1;
